--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     </footer>
 
-    <script src="./scripts/script-1.js"></script>
+    <script src="./scripts/script-a010.js"></script>
+    <script src="./fix/fix-a010.js"></script>
 </body>
 </html>
