mensagem para você, no futuro, entender quais modificações foram feitas neste commit

--- a/index.html
+++ b/index.html
@@ -3,25 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab.Dev</title>
+    <title>Document</title>
 </head>
 <body>
-    <header class="a">
-
-    </header>
-    <main class="b">
-        <section class="b1">
-
-        </section>
-        <aside class="b2">
-
-        </aside>
-    </main>
-    <footer class="c">
-
-    </footer>
-
+   Erika Botechia
     <script src="./scripts/script-a010.js"></script>
     <script src="./fix/fix-a010.js"></script>
+    <script src="./ex/ex1-a010.js"></script>
+    <script src="./ex/ex2-a010.js"></script>
 </body>
 </html>
