--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-   Erika Botechia
+   Br
+   <script src="./scripts/script-a005.js"></script>
+
+
+
+
     <script src="./scripts/script-a010.js"></script>
     <script src="./fix/fix-a010.js"></script>
     <script src="./ex/ex1-a010.js"></script>
